# igd2-for-linux

./: README
gupnp/gssdp/libgssdp/: gssdp-marshal.list  gssdp-resource-browser.c  gssdp-resource-browser.h
gupnp/gupnp/: configure.ac
gupnp/gupnp-tools/data/: gupnp-universal-cp.glade
gupnp/gupnp-tools/src/universal-cp/: Makefile.am  action-dialog.c  details-treeview.c  device-treeview.c  device-treeview.h  event-treeview.c  gui.c  statusbar.c  statusbar.h  user-administration-dialog.c  user-administration-dialog.h  user-login-setup-dialog.c  user-login-setup-dialog.h  wps-dialog.c  wps-dialog.h
gupnp/gupnp/libgupnp/: Makefile.am  crypt.c  crypt.h  gupnp-context.c  gupnp-context.h  gupnp-control-point.c  gupnp-device-info.c  gupnp-device-info.h  gupnp-device-proxy.c  gupnp-device-proxy.h  gupnp-device.c  gupnp-resource-factory-private.h  gupnp-resource-factory.c  gupnp-service-info.c  gupnp-service-info.h  gupnp-service-introspection.c  gupnp-service-proxy.c  gupnp-service-proxy.h  gupnp-service.c  gupnp-ssl-client.c  gupnp-ssl-client.h  gvalue-util.c  pki.c  pki.h  ssl-client.c  ssl-client.h  xml-util.c  xml-util.h
hostap/: README-LIBS
hostap/hostapd/: .config  .gitignore  Makefile  config_file.c  hostapd.conf.003  hostapd_iface.c  hostapd_iface.h  libhostapd.pc  libhostapd.pc.in  main.c
hostap/src/ap/: ap_config.c  ap_config.h  wps_hostapd.c
hostap/src/drivers/: driver_test.c
hostap/src/eap_peer/: eap_wsc.c
hostap/src/eap_server/: eap_server.c  eap_server_wsc.c
hostap/src/eapol_auth/: eapol_auth_sm.c
hostap/src/utils/: eloop.c
hostap/src/wps/: wps_enrollee.c  wps_registrar.c
hostap/wpa_supplicant/: .config  Makefile  libwpa_supplicant.pc.in  wpa_supplicant.c  wpa_supplicant_i.h  wpa_supplicant_iface.c  wpa_supplicant_iface.h  wps_supplicant.c
linuxigd2/: Doxyfile  Makefile  Makefile.am  configure.ac  gatedevice.c  main.c
linuxigd2/configs/: accesslevel.xml  deviceprotectionSCPD.xml  dummy.xml  gateEthlcfgSCPD.xml  gateconnSCPD.xml  gatedesc.xml  gatedesc1.xml  gateicfgSCPD.xml  lanhostconfigSCPD.xml  upnpd.conf  upnpd.init  upnpd_ACL.xml  wanipv6fwctrlSCPD.xml  wfaservice.xml
linuxigd2/doc/: CHANGES  INSTALL  lanhostconfig.txt
linuxigd2/etc/: gatedesc.xml  upnpd.conf
linuxigd2/src/: applicationlevelsecurity.c  applicationlevelsecurity.h  config.c  config.h  crypt.c  crypt.h  deviceprotection.c  deviceprotection.h  gatedevice.c  gatedevice.h  globals.h  iptc.c  iptc.h  lanhostconfig.c  lanhostconfig.h  main.c  pinholev6.c  pinholev6.h  pmlist.c  pmlist.h  unittest.c  unittest.h  util.c  util.h  wanipv6fw.c  wanipv6fw.h  wpa_supplicant_iface.h
linuxigd2/src/threadutil/: ThreadPool.h  UpnpGlobal.h  ithread.h
openwrt/customfeed/herqq/: Makefile
openwrt/customfeed/hostaplibs/: Makefile
openwrt/customfeed/libwpsutil/: Makefile
openwrt/customfeed/linuxigd2/: Makefile
openwrt/libupnp/: Makefile
pupnp_branch-1.6.x/upnp/: Makefile.am
pupnp_branch-1.6.x/upnp/inc/: upnp.h  upnpdebug.h
pupnp_branch-1.6.x/upnp/src/api/: upnpapi.c
pupnp_branch-1.6.x/upnp/src/gena/: gena_ctrlpt.c  gena_device.c
pupnp_branch-1.6.x/upnp/src/genlib/miniserver/: httpsserver.c  miniserver.c
pupnp_branch-1.6.x/upnp/src/genlib/net/: sock.c
pupnp_branch-1.6.x/upnp/src/genlib/net/http/: httpparser.c  httpreadwrite.c  webserver.c
pupnp_branch-1.6.x/upnp/src/genlib/service_table/: service_table.c
pupnp_branch-1.6.x/upnp/src/genlib/util/: pki.c
pupnp_branch-1.6.x/upnp/src/inc/: httpparser.h  httpreadwrite.h  httpsserver.h  miniserver.h  pki.h  service_table.h  soaplib.h  sock.h  ssdplib.h  upnpapi.h
pupnp_branch-1.6.x/upnp/src/soap/: soap_ctrlpt.c  soap_device.c  soaplib.h
pupnp_branch-1.6.x/upnp/src/ssdp/: ssdp_ctrlpt.c  ssdp_device.c  ssdp_server.c
system_test/: general_functions.sh  pbc_method_test.py  pin_method_test.py  test.sh
